# pybind11_template

./: CMakeLists.txt  LICENSE  README.md  setup.py
src/: main.cpp
